--- a/pages/posts/Index.mdx
+++ b/pages/posts/Index.mdx
@@ -1,3 +1,12 @@
 import PostNav from '../../src/component/PostNav.tsx'
 
 <PostNav />
+
+```ts
+import { useEffect } from 'react'
+import { useRouter } from 'next/router'
+import { usePathname } from 'next/navigation'
+```
+
+- 111
+- 222
