--- a/pages/posts/english/grammar/adj-clause.mdx
+++ b/pages/posts/english/grammar/adj-clause.mdx
@@ -11,14 +11,133 @@
 
 主句中的【先行词】一定是名词性成分；
 关系词可分为两类：
-1. 关系代词：who, whom, whose, which, that
-2. 关系副词：when, where, why
+- 关系代词：who, whom, whose, which, that
+- 关系副词：when, where, why
 在从句中不管用的是哪一种关系词，都是形容词性的从句，用来修饰名词性的先行词。
 
 ## 关系代词
 ### 与先行词的搭配
-如果先行词是人，关系词用who(主格), whom（宾格）, whose（所有格）
-如果先行词是物，关系词用which（主格宾格一致），whose（所有格）
+- 如果先行词是人，关系词用who(主格), whom（宾格）, whose（所有格）  
+- 如果先行词是物，关系词用which（主格宾格一致），whose（所有格）   
+- 除去所有格，无论是人和物，如果有关系从句有强烈的指示作用，关系词可以用句有指示性的that。  
+#### 何时用that
+- 先行词既有人又是物时
+He talked about the people and the things that he saw in China.  
+他谈论了他在中国看到的人和事物。  
 
+- 先行词被最高级修饰时
+This is the best movie that I have ever seen.  
+这是我看过的最好的电影。  
+
+- 先行词被序数词修饰时
+This is the first book that I have read this year.  
+这是我今年读的第一本书。  
+
+- 先行词被不定代词修饰时，如：all, some, any, none, everything, something, anything, nothing等
+All the things that he said are true.  
+他说的所有事情都是真的。  
+There is nothing that wo can do.  
+我们无能为力。  
+
+- 先行词被 the only, the same, the very等修饰时
+This is the only book that I need.  
+这是我唯一需要的书。  
+This is the same book that I read last year.  
+这就是我去年读的那本书。  
+This is the very book that I want.  
+这就是我想要的那本书。  
+
+- 避免重复时
+Who is the person that called you last night?  
+昨晚给你打电话的人是谁？  
+
+#### 不能用that的情况
+- 非限制性关系从句，因为非限制性关系从句是对先行词的补充说明，不能起到指示作用。   
+- My brother, **who lives in New York**, is a doctor.  
+     （我的哥哥住在纽约，是一名医生。）  
+   - ❌ My brother, **that lives in New York**, is a doctor. （错误）
+- 关系词在从句中作介词宾语，且介词提前时  
+- The house **in which I live** is very old.  
+     （我住的房子很旧。）  
+   - ❌ The house **in that I live** is very old. （错误） 
+- 先行词为指人的两个并列名词时   
+- The teacher and the student **who were talking** are in the room.  
+     （正在交谈的老师和学生在房间里。）  
+   - ❌ The teacher and the student **that were talking** are in the room. （错误）
+- 先行词是专有名词时  
+- Paris, **which is the capital of France**, is beautiful.  
+     （巴黎是法国的首都，很美丽。）  
+   - ❌ Paris, **that is the capital of France**, is beautiful. （错误）
 
 ## 关系副词
+- 关系副词when修饰时间，先行词是时间名词，如：time, day, year, moment等
+1. I remember the day **when we first met**.  
+   （我记得我们第一次见面的那一天。）  
+   - "when" 在从句中作时间状语。
+
+2. This is the house **where I was born**.  
+   （这就是我出生的房子。）  
+   - "where" 在从句中作地点状语。
+
+3. I don't know the reason **why he left**.  
+   （我不知道他离开的原因。）  
+   - "why" 在从句中作原因状语。
+
+只有关系词在从句中作状语时，才用关系副词，否则要用which或that。
+1. I remember the day **which you mentioned**.  
+   （我记得你提到的那一天。）  
+   - "which" 在从句中作宾语，而非状语。
+
+2. This is the house **that he bought last year**.  
+   （这是他去年买的房子。）  
+   - "that" 在从句中作宾语，而非状语。
+
+3. I don't know the reason **that she gave**.  
+   （我不知道她给出的理由。）  
+   - "that" 在从句中作宾语，而非状语。
+
+## 限制性与非限制性关系从句
+限制性关系从句和非限制性关系从句的区别在于：
+- 限制性没有逗号隔开，非限制性有逗号隔开
+- 限制性对先行词起限定作用，非限制性对先行词起补充说明作用
+- 限制性以用that，非限制性不能用that
+### 限制性关系从句
+限制性关系从句就是具有“指示功能”的关系从句，
+用来限定先行词的范围，可以理解为“千千万万”个中的“一个”。
+因为具有指示功能，所以在限制性关系从句中可以选择用that。
+1. The book **that I borrowed yesterday** is very interesting.  
+   （我昨天借的那本书非常有趣。）  
+   - 限制范围，指特定的一本书。
+
+2. The man **who is standing at the door** is my uncle.  
+   （站在门口的那个人是我叔叔。）  
+   - 限制范围，指特定的一个人。
+
+3. This is the house **where I grew up**.  
+   （这是我长大的那座房子。）  
+   - 限制范围，指特定的一座房子。
+
+
+### 非限制性关系从句
+非限制性关系从句通常用逗号隔开，表示对先行词的补充说明，没有限定、指示的作用，
+因此不能用that，只能用who, whom, whose, which等关系代词。
+
+1. This book, **which I borrowed from the library**, is very interesting.  
+   （这本书是我从图书馆借的，非常有趣。）  
+   - 补充说明，先行词 "this book" 已明确。
+
+2. My uncle, **who is standing at the door**, is a doctor.  
+   （我的叔叔站在门口，他是一名医生。）  
+   - 补充说明，先行词 "my uncle" 已明确。
+
+3. Paris, **which is the capital of France**, is a beautiful city.  
+   （巴黎是法国的首都，是一座美丽的城市。）  
+   - 补充说明，先行词 "Paris" 是专有名词，无需限定。
+
+### 用不用逗号的句意差别
+1. The book **that I borrowed yesterday** is very interesting.  
+   （我昨天借的那本书非常有趣。）  
+   - 我还有很多本书，可能有昨天借的，可能有上个星期借的，可能有买的，也可能有女朋友送的，反正不止一本，我说的是昨天借的那一本。
+2. The book, **which I borrowed yesterday**, is very interesting.
+   （这本书是我昨天借的，非常有趣。）  
+   - 我可能还有其他的书，也可能没有，反正我说的是这本书很有趣，顺便给你提一嘴这书是昨天借的。
