--- a/pages/posts/english/grammar/adj-clause.mdx
+++ b/pages/posts/english/grammar/adj-clause.mdx
@@ -1,3 +1,4 @@
+# 形容词性从句
 形容词性从句放在句子中当形容词使用，用来修饰名词性成分。  
 形容词性从句要与名词产生关系，所以会用到关系词，而形容词性从句也正是用这个关系词来做从属连接词的。  
 形容词性成分在句子中作定语修饰名词性成分，因此形容词性从句也叫定语从句。  
