--- a/pages/posts/english/grammar/adv-clause.mdx
+++ b/pages/posts/english/grammar/adv-clause.mdx
@@ -1,1 +1,47 @@
 # 副词性从句
+副词性从句的构造跟名词性从句类似，但是用法上有很大不同。名词性从句在主句中作主语，是不可或缺的成分，而副词性从句在主句中作状语，是可有可无的成分。
+***
+## 副词性从句的构造
+***
+## 副词性从句的常用引导词
+### 时间状语从句
+
+#### when
+
+#### while
+
+#### until
+
+#### “一...就...”
+
+副词性从句的引导词有以下几类：
+1. 时间状语从句：when, while, before, after, since, until, as soon as, the moment, the minute, the instant, by the time, etc.
+2. 地点状语从句：where, wherever
+3. 原因状语从句：because, since, as, now that, etc.
+4. 结果状语从句：so...that, such...that
+5. 目的状语从句：so that, in order that, for fear that, etc.
+6. 条件状语从句：if, unless, provided (that), as long as, in case, etc.
+7. 让步状语从句：though, although, even though, while, whereas, etc.
+8. 比较状语从句：as...as, so...as, than, etc.
+9. 方式状语从句：as, as if, as though, etc.
+10. 伴随状语从句：as, while, when, etc.
+11. 其他：than, as far as, etc.
+## 副词性从句的用法
+副词性从句在主句中作状语，表示时间、地点、原因、结果、目的、条件、让步、比较、方式、伴随等。副词性从句可以放在主句的前面、中间或后面，位置比较灵活。
+1. 放在主句前面：  
+   - **When** he arrived, we had already started the meeting.  
+   - **Because** it was raining, we stayed indoors.
+2. 放在主句中间：
+   - We, **when he arrived**, had already started the meeting.  
+   - We, **because it was raining**, stayed indoors.
+3. 放在主句后面：
+   - We had already started the meeting **when** he arrived.  
+   - We stayed indoors **because** it was raining.
+## 省略副词性从句的引导词
+有时为了避免重复，可以省略副词性从句的引导词，但必须确保句子仍然清晰易懂。通常在以下情况下可以省略引导词：
+1. 当从句的主语与主句的主语相同时，可以省略引导词和从句的主语：  
+   - He was very tired, **(because)** he had worked all day.  
+   - She left early, **(when)** the meeting ended.
+2. 当从句的谓语动词是be动词时，可以省略引导词和be动词： 
+   - The weather is nice, **(as)** it is spring.  
+   - The room was empty, **(when)** we arrived.
