--- a/pages/posts/english/grammar/adv-clause.mdx
+++ b/pages/posts/english/grammar/adv-clause.mdx
@@ -7,41 +7,104 @@
 ### 时间状语从句
 
 #### when
+when一般用于表示动作发生的时间点，从句的谓语动词一般是短暂动作。
+- **例句**: I was reading a book **when** she called me.
+when也能用于表示动作发生在一个时间段内，这时从句一般是使用进行时。
+- **例句**: I was listening to music **when** she was doing her homework.
 
 #### while
+while一般用于表示动作发生在一个时间段内，从句的谓语动词通常是延续动作。
+- **例句**: She listened to music **while** doing her homework.
 
 #### until
+“一直到”，从句的谓语动词一般是延续动作。
+- **例句**: We waited **until** he arrived.
+如果是短暂动作，则用否定
+- **例句**: I didn't leave **until** he called me.
 
 #### “一...就...”
+连接词有as soon as, the moment, the minute, the instant, immediately, directly, instantly等。
 
-副词性从句的引导词有以下几类：
-1. 时间状语从句：when, while, before, after, since, until, as soon as, the moment, the minute, the instant, by the time, etc.
-2. 地点状语从句：where, wherever
-3. 原因状语从句：because, since, as, now that, etc.
-4. 结果状语从句：so...that, such...that
-5. 目的状语从句：so that, in order that, for fear that, etc.
-6. 条件状语从句：if, unless, provided (that), as long as, in case, etc.
-7. 让步状语从句：though, although, even though, while, whereas, etc.
-8. 比较状语从句：as...as, so...as, than, etc.
-9. 方式状语从句：as, as if, as though, etc.
-10. 伴随状语从句：as, while, when, etc.
-11. 其他：than, as far as, etc.
-## 副词性从句的用法
-副词性从句在主句中作状语，表示时间、地点、原因、结果、目的、条件、让步、比较、方式、伴随等。副词性从句可以放在主句的前面、中间或后面，位置比较灵活。
-1. 放在主句前面：  
-   - **When** he arrived, we had already started the meeting.  
-   - **Because** it was raining, we stayed indoors.
-2. 放在主句中间：
-   - We, **when he arrived**, had already started the meeting.  
-   - We, **because it was raining**, stayed indoors.
-3. 放在主句后面：
-   - We had already started the meeting **when** he arrived.  
-   - We stayed indoors **because** it was raining.
-## 省略副词性从句的引导词
-有时为了避免重复，可以省略副词性从句的引导词，但必须确保句子仍然清晰易懂。通常在以下情况下可以省略引导词：
-1. 当从句的主语与主句的主语相同时，可以省略引导词和从句的主语：  
-   - He was very tired, **(because)** he had worked all day.  
-   - She left early, **(when)** the meeting ended.
-2. 当从句的谓语动词是be动词时，可以省略引导词和be动词： 
-   - The weather is nice, **(as)** it is spring.  
-   - The room was empty, **(when)** we arrived.
+### 地点状语从句
+#### where
+where表示“在...地方”，引导地点状语从句，通常是where+陈述句。
+- **例句**: This is the place **where** we first met.
+
+### 原因状语从句
+#### because
+所说明的原因往往是不为人所知或者最令人感星期的，只有它能用来回答why的提问，也只有它能被强调词only， just 或 perhaps 所修饰。
+- **例句**: She stayed at home **because** it was raining.
+#### since
+表示已知的事实或不需要强调的原因，常译为”既然“。
+- **例句**: **Since** you are here, let's start the meeting.
+
+#### as
+跟since差不多，所说明的原因已为人所知。
+- **例句**: **As** it was late, we decided to go home.
+
+#### for
+表示推断的理由，对前面所说的话作解释说明。
+- **例句**: He couldn't attend the meeting, **for** he was ill.
+
+### 目的状语从句
+#### so that
+so that表示“为了...”，引导目的状语从句，常用于表示意图或目的。
+- **例句**: He spoke slowly **so that** everyone could understand.
+#### in order that
+in order that表示“为了...”，引导目的状语从句，常用于正式场合。
+- **例句**: She left early **in order that** she might catch the train.
+#### for fear that
+for fear that表示“以免...”，引导目的状语从句，常用于表示担心或害怕某事发生。
+- **例句**: He spoke softly **for fear that** he might wake the baby.
+
+### 结果状语从句
+#### so...that
+so...that表示“如此...以至于...”，引导结果状语从句。
+- **例句**: He was **so** tired **that** he fell asleep immediately.
+#### such...that
+such...that表示“如此的...以至于...”，引导结果状语从句。
+- **例句**: It was **such** a hot day **that** we decided to go swimming.
+
+### 条件状语从句
+#### if
+if表示“如果...”，引导条件状语从句。
+- **例句**: **If** it rains, we will stay indoors.
+#### unless
+unless表示“除非...”，引导条件状语从句。
+- **例句**: We won't go out **unless** the weather improves.
+
+
+### 让步状语从句
+#### although / though / even though
+although / though / even though表示“虽然...”，引导让步状语从句。
+- **例句**: **Although** it was raining, we went for a walk.
+
+### 比较状语从句
+#### as...as
+as...as表示“和...一样...”，引导比较状语从句。
+- **例句**: She is **as** tall **as** her brother.
+#### so...as
+so...as表示“不如...”，引导比较状语从句，常用于否定句。
+- **例句**: He is not **so** smart **as** his sister.
+#### than
+than表示“比...”，引导比较状语从句。
+- **例句**: He runs faster **than** I do.
+
+### 方式状语从句
+#### as
+as表示“像...一样”，引导方式状语从句。
+- **例句**: She sings **as** her mother does.
+#### as if / as though
+as if / as though表示“好像...似的”，引导方式状语从句，常用于虚拟语气。
+- **例句**: He talks **as if** he knows everything.
+
+### 伴随状语从句
+#### as
+as表示“随着...的发生”，引导伴随状语从句。
+- **例句**: **As** the years passed, he became more experienced.
+#### while
+while表示“在...的同时”，引导伴随状语从句。
+- **例句**: She was studying **while** listening to music.
+#### when
+when表示“当...的时候”，引导伴随状语从句。
+- **例句**: He smiled **when** he saw her.
