--- a/pages/posts/english/grammar/adj-clause.mdx
+++ b/pages/posts/english/grammar/adj-clause.mdx
@@ -141,4 +141,4 @@ Who is the person that called you last night?
    - 我还有很多本书，可能有昨天借的，可能有上个星期借的，可能有买的，也可能有女朋友送的，反正不止一本，我说的是昨天借的那一本。
 2. The book, **which I borrowed yesterday**, is very interesting.
    （这本书是我昨天借的，非常有趣。）  
-   - 我可能还有其他的书，也可能没有，反正我说的是这本书很有趣，顺便给你提一嘴这书是昨天借的。
+   - 我可能还有其他的书，也可能没有，反正我说的是这本书很有趣，顺便提了一下这书是昨天借的。
