feat: text color

--- a/pages/posts/english/grammar/adv-clause.mdx
+++ b/pages/posts/english/grammar/adv-clause.mdx
@@ -4,70 +4,68 @@
 ## 副词性从句的构造
 ***
 ## 副词性从句的常用引导词
-### 时间状语从句
-
-#### when
+ - **例句**: I was reading a <b className='text-rose'>book</b> **when** <b className='text-rose'>she</b> called <b className='text-rose'>me</b>.
+ - when也能用于表示动作发生在一个时间段内，这时从句一般是使用进行时。
+ - **例句**: I was listening to <b className='text-rose'>music</b> **when** <b className='text-rose'>she</b> was doing her <b className='text-rose'>homework</b>.
 when一般用于表示动作发生的时间点，从句的谓语动词一般是短暂动作。
-- **例句**: I was reading a book **when** she called me.
-when也能用于表示动作发生在一个时间段内，这时从句一般是使用进行时。
+ - while一般用于表示动作发生在一个时间段内，从句的谓语动词通常是延续动作。
+ - **例句**: She listened to <b className='text-rose'>music</b> **while** doing her <b className='text-rose'>homework</b>.
 - **例句**: I was listening to music **when** she was doing her homework.
-
-#### while
-while一般用于表示动作发生在一个时间段内，从句的谓语动词通常是延续动作。
-- **例句**: She listened to music **while** doing her homework.
+ - “一直到”，从句的谓语动词一般是延续动作。
+ - **例句**: We waited **until** <b className='text-rose'>he</b> arrived.
+ - 如果是短暂动作，则用否定
+ - **例句**: <b className='text-rose'>I</b> didn't leave **until** <b className='text-rose'>he</b> called <b className='text-rose'>me</b>.
 
 #### until
-“一直到”，从句的谓语动词一般是延续动作。
+ - **例句**: This is the <b className='text-rose'>place</b> **where** <b className='text-rose'>we</b> <b className='text-violet'>first</b> met.
 - **例句**: We waited **until** he arrived.
 如果是短暂动作，则用否定
-- **例句**: I didn't leave **until** he called me.
+ - **例句**: <b className='text-rose'>She</b> stayed at <b className='text-rose'>home</b> **because** <b className='text-rose'>it</b> was <b className='text-violet'>raining</b>.
 
-#### “一...就...”
+ - **例句**: **Since** <b className='text-rose'>you</b> are <b className='text-violet'>here</b>, let's start the <b className='text-rose'>meeting</b>.
 连接词有as soon as, the moment, the minute, the instant, immediately, directly, instantly等。
-
+ - **例句**: **As** <b className='text-rose'>it</b> was <b className='text-amber'>late</b>, <b className='text-rose'>we</b> decided to go <b className='text-rose'>home</b>.
 ### 地点状语从句
-#### where
+ - **例句**: <b className='text-rose'>He</b> couldn't attend the <b className='text-rose'>meeting</b>, **for** <b className='text-rose'>he</b> was <b className='text-amber'>ill</b>.
 where表示“在...地方”，引导地点状语从句，通常是where+陈述句。
 - **例句**: This is the place **where** we first met.
-
+ - **例句**: <b className='text-rose'>He</b> spoke <b className='text-violet'>slowly</b> **so that** <b className='text-rose'>everyone</b> could understand.
 ### 原因状语从句
-#### because
+ - **例句**: <b className='text-rose'>She</b> left <b className='text-violet'>early</b> **in order that** <b className='text-rose'>she</b> might catch the <b className='text-rose'>train</b>.
 所说明的原因往往是不为人所知或者最令人感星期的，只有它能用来回答why的提问，也只有它能被强调词only， just 或 perhaps 所修饰。
-- **例句**: She stayed at home **because** it was raining.
+ - **例句**: <b className='text-rose'>He</b> spoke <b className='text-violet'>softly</b> **for fear that** <b className='text-rose'>he</b> might wake the <b className='text-rose'>baby</b>.
 #### since
 表示已知的事实或不需要强调的原因，常译为”既然“。
-- **例句**: **Since** you are here, let's start the meeting.
+ - **例句**: <b className='text-rose'>He</b> was **so** <b className='text-amber'>tired</b> **that** <b className='text-rose'>he</b> fell asleep <b className='text-violet'>immediately</b>.
 
-#### as
+ - **例句**: It was **such** a <b className='text-amber'>hot</b> <b className='text-rose'>day</b> **that** <b className='text-rose'>we</b> decided to go <b className='text-violet'>swimming</b>.
 跟since差不多，所说明的原因已为人所知。
 - **例句**: **As** it was late, we decided to go home.
-
+ - **例句**: **If** <b className='text-rose'>it</b> <b className='text-violet'>rains</b>, <b className='text-rose'>we</b> will stay <b className='text-violet'>indoors</b>.
 #### for
-表示推断的理由，对前面所说的话作解释说明。
+ - **例句**: <b className='text-rose'>We</b> won't go out **unless** the <b className='text-rose'>weather</b> <b className='text-violet'>improves</b>. 
 - **例句**: He couldn't attend the meeting, **for** he was ill.
 
-### 目的状语从句
+ - **例句**: **Although** <b className='text-rose'>it</b> was <b className='text-violet'>raining</b>, <b className='text-rose'>we</b> went for a <b className='text-rose'>walk</b>.
 #### so that
 so that表示“为了...”，引导目的状语从句，常用于表示意图或目的。
-- **例句**: He spoke slowly **so that** everyone could understand.
+ - **例句**: <b className='text-rose'>She</b> is **as** <b className='text-amber'>tall</b> **as** her <b className='text-rose'>brother</b>.
 #### in order that
-in order that表示“为了...”，引导目的状语从句，常用于正式场合。
+ - **例句**: <b className='text-rose'>He</b> is not **so** <b className='text-amber'>smart</b> **as** his <b className='text-rose'>sister</b>.
 - **例句**: She left early **in order that** she might catch the train.
-#### for fear that
+ - **例句**: <b className='text-rose'>He</b> runs <b className='text-violet'>faster</b> **than** <b className='text-rose'>I</b> do.
 for fear that表示“以免...”，引导目的状语从句，常用于表示担心或害怕某事发生。
 - **例句**: He spoke softly **for fear that** he might wake the baby.
-
+ - **例句**: <b className='text-rose'>She</b> sings **as** her <b className='text-rose'>mother</b> does.
 ### 结果状语从句
-#### so...that
+ - **例句**: <b className='text-rose'>He</b> talks **as if** <b className='text-rose'>he</b> <b className='text-violet'>knows</b> <b className='text-rose'>everything</b>.
 so...that表示“如此...以至于...”，引导结果状语从句。
 - **例句**: He was **so** tired **that** he fell asleep immediately.
-#### such...that
+ - **例句**: **As** the <b className='text-rose'>years</b> <b className='text-violet'>passed</b>, <b className='text-rose'>he</b> became more <b className='text-amber'>experienced</b>.
 such...that表示“如此的...以至于...”，引导结果状语从句。
-- **例句**: It was **such** a hot day **that** we decided to go swimming.
+ - **例句**: <b className='text-rose'>She</b> was <b className='text-violet'>studying</b> **while** listening to <b className='text-rose'>music</b>.
 
-### 条件状语从句
-#### if
-if表示“如果...”，引导条件状语从句。
+ - **例句**: <b className='text-rose'>He</b> <b className='text-violet'>smiled</b> **when** <b className='text-rose'>he</b> <b className='text-violet'>saw</b> <b className='text-rose'>her</b>.
 - **例句**: **If** it rains, we will stay indoors.
 #### unless
 unless表示“除非...”，引导条件状语从句。
