feat: nav style

--- a/pages/posts/english/Index.mdx
+++ b/pages/posts/english/Index.mdx
@@ -1,6 +1,6 @@
-import PostNav from '../../../src/component/PostNav.tsx'
+import EnglishNav from '../../../src/component/EnglishNav.tsx'
 
-<PostNav />
+<EnglishNav />
 
 ```ts
 import { useEffect } from 'react'
