--- a/pages/posts/english/grammar/Index.mdx
+++ b/pages/posts/english/grammar/Index.mdx
@@ -1,6 +1,6 @@
-import PostNav from '../../../../src/component/PostNav.tsx'
+import EnglishNav from '../../../../src/component/EnglishNav.tsx'
 import GrammarList from '../../../../src/component/posts/english/grammar/GrammarList.tsx'
 
-<PostNav />
+<EnglishNav />
 
 <GrammarList />
