feat: optimize nav

--- a/pages/posts/Index.mdx
+++ b/pages/posts/Index.mdx
@@ -1,12 +1,7 @@
 import PostNav from '../../src/component/PostNav.tsx'
+import JsCoreList from '../../src/component/posts/js_core/JsCoreList.tsx'
 
 <PostNav />
 
-```ts
-import { useEffect } from 'react'
-import { useRouter } from 'next/router'
-import { usePathname } from 'next/navigation'
-```
+<JsCoreList />
 
-- 111
-- 222
