--- a/pages/posts/english/grammar/introduction.mdx
+++ b/pages/posts/english/grammar/introduction.mdx
@@ -1,8 +1,8 @@
 import grammarSvg from './assets/grammar.svg'
 
-# 学语法，就要快 —— 告别“玄学”，重建你的英语底层逻辑
+# 学语法，就要快 —— 告别“玄学”，重建英语底层逻辑
 
-## 1. 为什么你的英语学习总是“半途而废”？
+## 1. 为什么英语学习总是“半途而废”？
 
 如果把英语比作一座大厦，那么**词汇**就是砖石，**语法**就是钢筋骨架。
 
@@ -35,4 +35,3 @@ import grammarSvg from './assets/grammar.svg'
 
 ## 结语
 
-学语法，不求多，但求快而准。在这个系列中，我将带你跳出琐碎的规则陷阱，直接俯瞰英语的逻辑全景。准备好了吗？让我们开始这场高效的语法重塑之旅。
