--- a/pages/posts/english/grammar/introduction.mdx
+++ b/pages/posts/english/grammar/introduction.mdx
@@ -14,9 +14,15 @@ import grammarSvg from './assets/grammar.svg'
 
 ## 2. 爱情应该是“长跑”，而语法不是
 
+语法是学不完的。
+
 其实，支撑起 80% 英语阅读和表达的语法核心，并不是那些偏难怪的特例，而是一套**成体系、有规律、可推导**的逻辑框架。
 
-学语法，不应该追求“面面俱到”，而应该追求“快速建模”。一旦你脑子里有了这张地图，剩下的细节只是在往地图里填色。我们要做的，是用最短的时间，把这套底层逻辑植入大脑，实现从“死记硬背”到“逻辑推导”的跨越。
+学语法，不应该追求“面面俱到”，而应该追求“快速建模”。一旦你脑子里有了这张地图，剩下的细节只是在往地图里填色。
+
+我们要做的，是用最短的时间，把这套底层逻辑植入大脑，然后去实践。
+
+有了这个框架后，基本就能开始看到英文句子，剩下的就是慢慢积累词汇，遇到细致的语法问题再针对的去补充学习。
 
 ## 3. 英语底层逻辑地图
 
