--- a/pages/posts/algorithm/array.mdx
+++ b/pages/posts/algorithm/array.mdx
@@ -254,12 +254,42 @@
 
   ### 时间复杂度对比
 
-  | 算法 | 暴力解法 | 双指针优化 | 优化原因 |
-  |------|---------|-----------|---------|
-  | 回文判断 | O(n) | O(n) | 减少一半比较次数 |
-  | 数组去重 | O(n²) | O(n) | 避免嵌套循环 |
-  | 最长不重复子串 | O(n³) | O(n) | 避免重复计算 |
-  | 固定窗口求和 | O(n×k) | O(n) | 复用前一个窗口的结果 |
+  <table>
+    <thead>
+      <tr>
+        <th>算法</th>
+        <th>暴力解法</th>
+        <th>双指针优化</th>
+        <th>优化原因</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>回文判断</td>
+        <td>O(n)</td>
+        <td>O(n)</td>
+        <td>减少一半比较次数</td>
+      </tr>
+      <tr>
+        <td>数组去重</td>
+        <td>O(n²)</td>
+        <td>O(n)</td>
+        <td>避免嵌套循环</td>
+      </tr>
+      <tr>
+        <td>最长不重复子串</td>
+        <td>O(n³)</td>
+        <td>O(n)</td>
+        <td>避免重复计算</td>
+      </tr>
+      <tr>
+        <td>固定窗口求和</td>
+        <td>O(n×k)</td>
+        <td>O(n)</td>
+        <td>复用前一个窗口的结果</td>
+      </tr>
+    </tbody>
+  </table>
 
   ### 空间复杂度
 
@@ -708,13 +738,42 @@
 
   ### 常见变体
 
-  | 问题类型 | 双指针类型 | 典型题目 |
-  |---------|-----------|---------|
-  | 回文判断 | 对撞指针 | 验证回文串、最长回文子串 |
-  | 两数之和 | 对撞指针 | 两数之和 II、三数之和 |
-  | 数组去重 | 快慢指针 | 删除重复项、移动零 |
-  | 子串查找 | 滑动窗口 | 最小覆盖子串、无重复字符的最长子串 |
-  | 子数组和 | 滑动窗口 | 长度最小的子数组、最大子数组和 |
+  <table>
+    <thead>
+      <tr>
+        <th>问题类型</th>
+        <th>双指针类型</th>
+        <th>典型题目</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>回文判断</td>
+        <td>对撞指针</td>
+        <td>验证回文串、最长回文子串</td>
+      </tr>
+      <tr>
+        <td>两数之和</td>
+        <td>对撞指针</td>
+        <td>两数之和 II、三数之和</td>
+      </tr>
+      <tr>
+        <td>数组去重</td>
+        <td>快慢指针</td>
+        <td>删除重复项、移动零</td>
+      </tr>
+      <tr>
+        <td>子串查找</td>
+        <td>滑动窗口</td>
+        <td>最小覆盖子串、无重复字符的最长子串</td>
+      </tr>
+      <tr>
+        <td>子数组和</td>
+        <td>滑动窗口</td>
+        <td>长度最小的子数组、最大子数组和</td>
+      </tr>
+    </tbody>
+  </table>
 
   ### 进阶学习
 
