feat: edit title

--- a/pages/posts/algorithm/array.mdx
+++ b/pages/posts/algorithm/array.mdx
@@ -6,7 +6,7 @@ import slidingWindowSvg from './assets/sliding-window.svg'
 import fixedSizeSvg from './assets/fixed-size.svg'
 
 
-# 前端算法系列(一):数组与字符串操作 - 双指针技巧详解
+# 数组与字符串操作 - 双指针技巧详解
 
 ## 一、问题引入
 
