feat: 代码块滚动条

--- a/pages/posts/english/grammar/part-of-speech.mdx
+++ b/pages/posts/english/grammar/part-of-speech.mdx
@@ -1,15 +1,162 @@
-# 词性的修饰关系
+# 认识五大核心词性
 
-“形容词修饰名词，副词修饰形容词、动词或其他副词。” 如果你花费了宝贵的时间读完这个章节，只要能记下来这一句话，就不能算浪费生命。
+显而易见的，句子中的每个单词不能随意摆放位置，理解词性就能让我们清楚每个单词应该在句子的什么位置。
 
-名词、形容词、副词、动词就是英语句子的一切。
+---
 
-词性如果详细划分有10大类之多，但比如像冠词，后面接名词，总体还是可以看成名词，再比如介词，后面接名词起修饰作用，也可以看成是形容词或者副词。
+## 词性有哪些？
 
-结果就是，英文句子中的单词、短语、从句等成分，最终都可以归结为名词性成分、形容词性成分、副词性成分、动词这四大类。
+英语中常见的词性有：
 
-ok，现在你知道一个英文句子来来去去就那么4种词语，再搞明白词性的修饰关系，就可以理解每个单词、短语在句子中的功能了。
+1. **名词** (Noun) - 人、事物的名称
+2. **代词** (Pronoun) - 代替名词
+3. **数词** (Numeral) - 表示数量或顺序
+4. **动词** (Verb) - 动作或状态
+5. **形容词** (Adjective) - 描述名词
+6. **副词** (Adverb) - 修饰动词、形容词等
+7. **介词** (Preposition) - 表示关系
+8. **连词** (Conjunction) - 连接词句
+9. **冠词** (Article) - 限定名词
 
-说到这里，其实所谓词性的修饰关系大家也早已学会，没错，就是“形容词修饰名词，副词修饰形容词、动词或其他副词。”
 
+---
 
+**词性就是单词的分类标签**，告诉我们这个词在句子中扮演什么角色。
+
+让我们先看看这个句子中每个词的具体词性：
+
+```
+I      carefully   read   three   interesting   books   at   home   yesterday
+↓         ↓         ↓       ↓          ↓           ↓      ↓     ↓       ↓
+代词     副词      动词    数词      形容词       名词   介词  名词    副词
+```
+
+看起来有9种不同的词性！但别担心，我们可以把它们归纳成**四大核心类别**：
+
+```
+I      carefully   read   three   interesting   books   at   home   yesterday
+↓         ↓         ↓       ↓          ↓           ↓      ↓     ↓       ↓
+名词类    副词类    动词类  名词类    形容词类     名词类  副词类 名词类  副词类
+```
+
+---
+
+## 四大核心归类
+
+### 1. 名词类 - 句子的主角
+
+**包括**：名词、代词、数词
+
+**作用**：充当主语或宾语
+
+**例子**：
+- **books**（名词）、**I**（代词）、**three**（数词）
+
+```
+I read books.
+↓      ↓
+主语   宾语
+```
+
+---
+
+### 2. 动词类 - 句子的灵魂
+
+**包括**：实义动词、系动词、助动词
+
+**作用**：表示动作或状态
+
+**例子**：
+- **read**（读）、**is**（是）、**can**（能）
+
+```
+I read books.
+  ↓
+ 动词
+```
+
+---
+
+### 3. 形容词类 - 名词的修饰者
+
+**包括**：形容词、冠词、物主代词
+
+**作用**：修饰名词
+
+**例子**：
+- **interesting**（有趣的）、**the**（这个）、**my**（我的）
+
+```
+interesting books
+↓
+修饰名词
+```
+
+---
+
+### 4. 副词类 - 万能修饰词
+
+**包括**：副词、介词短语
+
+**作用**：修饰动词、形容词、副词
+
+**例子**：
+- **carefully**（仔细地）、**yesterday**（昨天）、**at home**（在家）
+
+```
+read carefully
+     ↓
+   修饰动词
+```
+
+---
+
+### 连词 - 句子的桥梁
+
+**作用**：连接词、短语或句子
+
+**例子**：**and**（和）、**but**（但是）、**because**（因为）
+
+```
+I read books and watched TV.
+             ↑
+           连词
+```
+
+*连词会在后面"从句"部分详细讲解。*
+
+---
+
+## 回到我们的例句
+
+**"I carefully read three interesting books at home yesterday."**
+
+### 具体词性：
+```
+I      carefully   read   three   interesting   books   at   home   yesterday
+↓         ↓         ↓       ↓          ↓           ↓      ↓     ↓       ↓
+代词     副词      动词    数词      形容词       名词   介词  名词    副词
+```
+
+### 归类后：
+```
+I      carefully   read   three   interesting   books   at   home   yesterday
+↓         ↓         ↓       ↓          ↓           ↓      ↓     ↓       ↓
+名词类    副词类    动词类  名词类    形容词类     名词类  副词类 名词类  副词类
+```
+
+---
+
+## 核心规律
+
+```
+名词类 ←── 形容词类修饰
+  ↓
+动词类 ←── 副词类修饰
+```
+
+**记住**：
+- **形容词类 → 修饰名词类**
+- **副词类 → 修饰动词类、形容词类、副词类**
+
+---
