--- a/pages/posts/english/grammar/basic-sentence-patterns.mdx
+++ b/pages/posts/english/grammar/basic-sentence-patterns.mdx
@@ -1,7 +1,99 @@
-基本句型
+## 五大基本句型总整理（导读 + 正文合并完整版）
 
-主谓
-主系表
-主谓宾
-主谓宾宾
-主谓宾补
+### 导读：英语如何根据动词把句子归纳成 5 个基本句型？
+
+英文句子看起来变化很多：有的很短、有的很长；有的后面接时间地点、有的接一整串子句。但是不管句子怎么变，每一个完整的英文句子都一定有**动词**，而且写作时最关键的一步就是：先抓住这个动词，再判断它在这个句子里**需要哪些必需成分**，句子主干才会完整。
+
+这里先区分两个观念：
+
+1. **必需成分（complements）**：没有它，句意会不完整，读者会觉得“你还没讲完”。例如：*chase* 通常要交代“追什么”；*consider* 通常要交代“把它当成什么”。  
+2. **修饰语（adjuncts）**：用来补充时间、地点、方式等资讯，可加可不加；拿掉后句子主干仍成立。例如：*this morning / in the yard / very quickly* 之类。
+
+所谓「基本句型」，其实就是把修饰语暂时放一边，只看动词为了把句意说完，后面到底**需要几个必需成分**。这样归纳下来，最常见、最稳定的句子骨架大致就只剩 5 种：
+
+- **不及物动词：S + V**（动词可独力完成）  
+- **及物动词：S + V + O**（动词需要一个受词）  
+- **系动词：S + V + C**（动词连接主词与说明，需补语）  
+- **双宾动词：S + V + O1 + O2**（动词需要两个受词：给谁、给什么）  
+- **宾语补语：S + V + O + C**（动词需要“受词 + 对受词的说明”）
+
+理解这 5 个基本句型的意义在于：写作时你只要先锁定动词，就能快速判断句子的主干该长什么样，避免把“该有的受词/补语”漏掉，也避免把“只是修饰语的东西”误当成主干的一部分。接下来就依序用例句来说明这五种句型的结构与元素。
+
+---
+
+# 一. S + V
+
+### The dog barked. S V（狗叫了。）
+
+这个句子的主语是主词 **the dog** 这个名词片语、由它担任主角。所谓名词，指的是「人、地、事、物」的名称。由这个定义来看，一个句子的主词必须是名词类，包括名词片语、代名词、名词子句等等。
+
+本句的述部以动词 **barked** 为主，告诉读者说这只狗「叫」。像 **bark** 这种动词称为**不及物动词**，可以独力完成而不需要受词来接受这个动作。因此 **The dog barked.** 本身就是一个完整句子。
+
+> 你当然也可以加上时间、地点、方式等修饰语把画面补得更清楚，但那些多半是“可有可无”的附加资讯；主干仍是 **S + V**。
+
+---
+
+# 二. S + V + O
+
+### The dog chased the ball. S V O（狗追球。）
+
+这个例子中，**chase**（追逐）这种动作和 bark 很不一样：要表达「追」这个动作，通常得交代一个对象——追**什么**。这种用法下的动词称为**及物动词**，后面必须有受词来「接受」这个动作。
+
+上例中 **chased** 就是及物动词，而被追的 **the ball**（球）就是它的受词。顺便提一下：和主词的情况相同，受词也必须是「人、地、事、物」，所以受词的词类也必须是名词类（包括代名词、名词片语、名词子句等等）。
+
+这里有一点必须先说明一下：同一个动词，视用法的不同，经常是有可能当及物动词使用、也有可能当不及物动词使用。写作时要特别注意：如果动词在这个用法下需要受词，你就不能把它省略；除非语境非常清楚，否则读者会觉得句意不完整。
+
+---
+
+# 三. S + V + C（主系表）
+
+### The dog is playful. S V C（狗很顽皮。）
+
+这个句子的主语仍然是 **the dog**，由它担任主角。
+
+述部最重要的是 **is**。在这里 **be 动词（am/is/are/was/were）**并不是在表达“做某个动作”，而是用来**连接主词与后面的说明**，所以它属于**系动词**。
+
+后面的 **playful** 是**补语（C）**，更具体说是**主词补语/表语**：它用来说明主词 **the dog**「是什么样子/处于什么状态」。因此这句的骨架不是“狗做了什么”，而是“狗是怎样的”。
+
+---
+
+# 四. S + V + O1 + O2（双宾语）
+
+### The boy gave the dog a ball. S V O1 O2（男孩给狗一个球。）
+
+这个句子的主语是 **the boy**（名词片语），述部动词是 **gave**。像 **give** 这种动词，语意上常牵涉到两件事：  
+1) 给**谁**（接受者）  
+2) 给**什么**（物品）
+
+因此后面会出现两个受词：
+
+- **the dog** 是 **O1（间接受词）**：表示接受者（给谁）。  
+- **a ball** 是 **O2（直接受词）**：表示被给予的东西（给什么）。
+
+这个句型还有一个很好用的检验方式：可以改写成介系词结构，意思大致不变：  
+**The boy gave a ball to the dog.**（男孩把球给了狗。）  
+这里的 *to the dog* 就对应原句的间接受词 **the dog**。
+
+---
+
+# 五. S + V + O + C（宾语补语）
+
+### The boy considers the dog a good friend. S V O C（男孩认为狗是个好朋友。）
+
+这个句子的主语是 **the boy**，动词是 **considers**（认为/视为）。像 **consider** 这种动词常见的用法是：
+
+- **consider + 受词 + 补语**  
+用来表达“把某人/某物视为……”。
+
+上例中：
+
+- **the dog** 是受词（O）：被“视为”的对象。  
+- **a good friend** 是补语（C），更精确说是**宾语补语**：用来补充说明受词 *the dog* 被视为什么身份（一个好朋友）。
+
+这句的关键在于：**宾语补语不是可有可无的修饰语**。如果只写成 *The boy considers the dog.* 读者会立刻觉得意思没讲完：他“认为这只狗怎样/是什么”？所以必须用 **a good friend** 把句意补足。
+
+---
+
+## 结语：写作时你真正要练的是什么？
+
+写作的时候，每个英文句子都有动词、也都需要判断这个动词在该用法下是及物还是不及物、后面该不该有受词、需不需要补语。研究文法，可以让我们知道总共有哪几种句型、每种句型当中有哪几种元素；但是文法通常不能直接告诉我们某一个动词在某个语境下到底该不该带受词、该不该带补语。要解决这个问题：必须透过广读，大量阅读英文句子、大量接触真实用法，逐渐对一些常用动词的用法会有一些把握，知道它是及物还是不及物、后面该不该有受词，写作时才不容易用错句型。
